--- a/kubernetes/apps/media/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/recyclarr/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
           reloader.stakater.com/auto: "true"
         type: cronjob
         cronjob:
-          timeZone: &tz ${CONFIG_TIMEZONE}
+          timeZone: &tz Europe/Stockholm
           schedule: "@daily"
           successfulJobsHistory: 1
           failedJobsHistory: 1
