--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
               repository: ghcr.io/home-operations/qbittorrent
               tag: 5.1.2@sha256:31ac39705e31f7cdcc04dc46c1c0b0cdf8dc6f9865d4894efc097a33adc41524
             env:
-              TZ: &tz ${CONFIG_TIMEZONE}
+              TZ: &tz Europe/Stockholm
               QBT_WEBUI_PORT: &port 80
               QBT_TORRENTING_PORT: &bittorrentPort ${SVC_QBITTORRENT_PORT}
               # Settings based on https://trash-guides.info/Downloaders/qBittorrent/.
