--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
               repository: ghcr.io/rommapp/romm
               tag: 4.2.0@sha256:7750c09db727c0b4d9225fea518dcef94142e7d2b2dbcfb451e904e66a05f8ec
             env:
-              TZ: ${CONFIG_TIMEZONE}
+              TZ: Europe/Stockholm
               # Used for Tinfoil Integration. For more information, see https://docs.romm.app/latest/Integrations/Tinfoil-integration/?h=disable_download_endpoint_auth
               DISABLE_DOWNLOAD_ENDPOINT_AUTH: true
               # Only set to true after first run and admin has been created.
