--- a/kubernetes/apps/media/navidrome/app/helmrelease.yaml
+++ b/kubernetes/apps/media/navidrome/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
               repository: ghcr.io/navidrome/navidrome
               tag: 0.58.0@sha256:2ae037d464de9f802d047165a13b1c9dc2bdbb14920a317ae4aef1233adc0a3c
             env:
-              TZ: ${CONFIG_TIMEZONE}
+              TZ: Europe/Stockholm
               ND_LOGLEVEL: info
               ND_DATAFOLDER: /data
               ND_CACHEFOLDER: /data/cache
