--- a/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
               repository: ghcr.io/home-operations/prowlarr
               tag: 2.1.1.5185@sha256:23c5597e203af76e42696c5cbb503493ab6b983cb042636c2a78d26b88a5a23d
             env:
-              TZ: ${CONFIG_TIMEZONE}
+              TZ: Europe/Stockholm
               PROWLARR__APP__INSTANCENAME: Prowlarr
               PROWLARR__APP__THEME: dark
               PROWLARR__AUTH__METHOD: External
