--- a/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
               repository: ghcr.io/unpoller/unpoller
               tag: v2.15.4@sha256:788a890f2dc5aef3e99ce430917221c43b4e084464d38bc6537a8c7294ef8770
             env:
-              TZ: ${CONFIG_TIMEZONE}
+              TZ: Europe/Stockholm
               UP_INFLUXDB_DISABLE: true
               UP_POLLER_DEBUG: false
               UP_UNIFI_DEFAULT_ROLE: home-ops
