--- a/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
               repository: ghcr.io/atuinsh/atuin
               tag: v18.8.0@sha256:8a8a8ef4eb5865656072bace5cc49390b56caa81360f9f0869054777155b6ef1
             env:
-              TZ: ${CONFIG_TIMEZONE}
+              TZ: Europe/Stockholm
               ATUIN_HOST: 0.0.0.0
               ATUIN_PORT: &port 8080
               ATUIN_OPEN_REGISTRATION: true
