--- a/kubernetes/apps/utilities/cyberchef/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/cyberchef/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
               repository: ghcr.io/gchq/cyberchef
               tag: 10.19.4@sha256:a2bfe382b2547bdd0a3d0523b9a6b85fab833c56bcec86d600ba6266910b533e
             env:
-              TZ: ${CONFIG_TIMEZONE}
+              TZ: Europe/Stockholm
             probes:
               liveness: &probes
                 enabled: true
