--- a/kubernetes/apps/utilities/it-tools/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/it-tools/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
               repository: ghcr.io/corentinth/it-tools
               tag: 2024.5.13-a0bc346@sha256:c191615f23eb6a18b8faca4dba15fc11caefea250ce3a8e29d249757544092eb
             env:
-              TZ: ${CONFIG_TIMEZONE}
+              TZ: Europe/Stockholm
             probes:
               liveness:
                 enabled: true
