--- a/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
+++ b/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
@@ -18,7 +18,7 @@ spec:
       retries: 3
   values:
     controllers:
-      pg17-cluster:
+      pg17-cluster-backup:
         annotations: &annotations
           reloader.stakater.com/auto: "true"
         type: cronjob
@@ -32,16 +32,17 @@ spec:
             image:
               repository: docker.io/prodrigestivill/postgres-backup-local
               tag: 17@sha256:483fa15ecd998302bd312fc380cb1b3683a940881d9099d6dfe65bcc1e2714e8
-            envFrom: &envFrom
-              - secretRef:
-                  name: "{{ .Release.Name }}-secret"
             env:
               TZ: *tz
               POSTGRES_HOST: pg17-cluster-ro.database.svc.cluster.local
               POSTGRES_DB: atuin,bazarr,lidarr_log,lidarr_main,nextcloud,prowlarr_log,prowlarr_main,radarr_log,radarr_main,romm,sonarr_log,sonarr_main
+              BACKUP_DIR: /backups/PostgreSQL
               BACKUP_KEEP_DAYS: 14
               BACKUP_KEEP_WEEKS: 2
               BACKUP_KEEP_MONTHS: 0
+            envFrom: &envFrom
+              - secretRef:
+                  name: "{{ .Release.Name }}-secret"
             command: &command
               - /bin/bash
               - -x
@@ -50,7 +51,7 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
-      pg17-immich:
+      pg17-immich-backup:
         annotations: *annotations
         type: cronjob
         cronjob: *cronjob
@@ -59,22 +60,23 @@ spec:
             image:
               repository: docker.io/prodrigestivill/postgres-backup-local
               tag: 17@sha256:483fa15ecd998302bd312fc380cb1b3683a940881d9099d6dfe65bcc1e2714e8
-            envFrom: *envFrom
             env:
               TZ: *tz
               POSTGRES_HOST: pg17-immich-ro.database.svc.cluster.local
               POSTGRES_DB: immich
+              BACKUP_DIR: /backups/PostgreSQL
               BACKUP_KEEP_DAYS: 7
               BACKUP_KEEP_WEEKS: 4
               BACKUP_KEEP_MONTHS: 0
+            envFrom: *envFrom
             command: *command
             securityContext: *securityContext
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
-        runAsUser: &uid 5000
-        runAsGroup: &gid 3020
-        fsGroup: *gid
+        runAsUser: &id 1000
+        runAsGroup: *id
+        fsGroup: *id
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
@@ -83,6 +85,6 @@ spec:
       backups:
         type: nfs
         server: nas.${SECRET_DOMAIN}
-        path: ${SECRET_NFS_PATH_PGBACKUPS}
+        path: /mnt/hdd-data/Backups
         globalMounts:
           - path: /backups
