--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -21,18 +21,13 @@ spec:
       name: kube-state-metrics-configmap
       valuesKey: kube-state-metrics-config.yaml
   values:
-    crds:
-      enabled: true
-      upgradeJob:
-        enabled: true
-        forceConflicts: true
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
       route:
         main:
           enabled: true
           hostnames:
-            - "alertmanager.${SECRET_DOMAIN}"
+            - alertmanager.${SECRET_DOMAIN}
           parentRefs:
             - name: envoy-internal
               namespace: network
@@ -42,6 +37,7 @@ spec:
           name: alertmanager
           global:
             resolveTimeout: 5m
+        externalUrl: https://alertmanager.${SECRET_DOMAIN}
         resources:
           requests:
             cpu: 10m
@@ -136,7 +132,7 @@ spec:
         main:
           enabled: true
           hostnames:
-            - "prometheus.${SECRET_DOMAIN}"
+            - prometheus.${SECRET_DOMAIN}
           parentRefs:
             - name: envoy-internal
               namespace: network
@@ -156,6 +152,7 @@ spec:
         ruleSelectorNilUsesHelmValues: false
         scrapeConfigSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
+        externalUrl: https://prometheus.${SECRET_DOMAIN}
         retention: 14d
         retentionSize: 50GB
         resources:
