--- a/kubernetes/apps/observability/fluent-bit/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/fluent-bit/app/helmrelease.yaml
@@ -91,6 +91,8 @@ spec:
           structured_metadata container=$k_container_name, pod=$k_pod_name, host=$k_host
           compress gzip
     dashboards:
+      annotations:
+          grafana_folder: System
       enabled: true
     serviceMonitor:
       enabled: true
