chore: remove quotes

--- a/kubernetes/apps/network/external-dns/cloudflare/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/cloudflare/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
       - --gateway-name=envoy-external
       - --zone-id-filter=$(CF_ZONE_ID)
     domainFilters:
-      - "${SECRET_DOMAIN}"
+      - ${SECRET_DOMAIN}
     policy: sync
     sources:
       - crd
