--- a/kubernetes/apps/network/external-dns/unifi/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/unifi/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
     extraArgs:
       - --ignore-ingress-tls-spec
     domainFilters:
-      - "${SECRET_DOMAIN}"
+      - ${SECRET_DOMAIN}
     policy: sync
     sources:
       - gateway-httproute
