--- a/kubernetes/apps/self-hosted/searxng/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/searxng/app/helmrelease.yaml
@@ -159,7 +159,7 @@ spec:
       app:
         hostnames:
           - "{{ .Release.Name }}.${SECRET_DOMAIN}"
-          - "search.${SECRET_DOMAIN}"
+          - search.${SECRET_DOMAIN}
         parentRefs:
           - name: envoy-internal
             namespace: network
