--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -231,7 +231,7 @@ spec:
       app:
         hostnames:
           - "{{ .Release.Name }}.${SECRET_DOMAIN}"
-          - "qbit.${SECRET_DOMAIN}"
+          - qbit.${SECRET_DOMAIN}
         parentRefs:
           - name: envoy-internal
             namespace: network
