--- a/kubernetes/apps/network/envoy-gateway/config/config.yaml
+++ b/kubernetes/apps/network/envoy-gateway/config/config.yaml
@@ -48,7 +48,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   annotations:
-    external-dns.alpha.kubernetes.io/target: &hostname "external.${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/target: &hostname external.${SECRET_DOMAIN}
   name: envoy-external
 spec:
   gatewayClassName: envoy
@@ -72,14 +72,14 @@ spec:
       tls:
         certificateRefs:
           - kind: Secret
-            name: "${SECRET_DOMAIN/./-}-tls"
+            name: ${SECRET_DOMAIN/./-}-tls
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   annotations:
-    external-dns.alpha.kubernetes.io/target: &hostname "internal.${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/target: &hostname internal.${SECRET_DOMAIN}
   name: envoy-internal
 spec:
   gatewayClassName: envoy
