--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -169,7 +169,7 @@ spec:
       app:
         hostnames:
           - "{{ .Release.Name }}.${SECRET_DOMAIN}"
-          - "foto.${SECRET_DOMAIN}"
+          - foto.${SECRET_DOMAIN}
         parentRefs:
           - name: envoy-internal
             namespace: network
