--- a/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
@@ -84,7 +84,7 @@ spec:
       app:
         hostnames:
           - "{{ .Release.Name }}.${SECRET_DOMAIN}"
-          - "sh.${SECRET_DOMAIN}"
+          - sh.${SECRET_DOMAIN}
         parentRefs:
           - name: envoy-internal
             namespace: network
