--- a/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
@@ -3,12 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app external-dns-cloudflare
+  name: &app cloudflare-dns
 spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: external-dns-cloudflare
+    name: cloudflare-dns
   install:
     remediation:
       retries: -1
@@ -24,7 +24,7 @@ spec:
       - name: &name CF_API_TOKEN
         valueFrom:
           secretKeyRef:
-            name: &secret external-dns-cloudflare-secret
+            name: &secret cloudflare-dns-secret
             key: *name
       - name: &name CF_ZONE_ID
         valueFrom:
