--- a/kubernetes/apps/network/cloudflare-dns/app/prometheusrule.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/prometheusrule.yaml
@@ -3,12 +3,12 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: external-dns-unifi
+  name: cloudflare-dns
 spec:
   groups:
-    - name: external-dns-unifi.rules
+    - name: cloudflare-dns.rules
       rules:
-        - alert: ExternalDNSUnifiStale
+        - alert: ExternalDNSCloudflareStale
           expr: |-
             time() - external_dns_controller_last_sync_timestamp_seconds{job="external-dns-cloudflare"} > 60
           for: 5m
