--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -7,8 +7,10 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
+  - ./cloudflare-dns/ks.yaml
   - ./cloudflared/ks.yaml
   - ./echo-server/ks.yaml
   - ./envoy-gateway/ks.yaml
   - ./external-dns/ks.yaml
   - ./tailscale-operator/ks.yaml
+  - ./unifi-dns/ks.yaml
