--- a/kubernetes/apps/network/unifi-dns/app/externalsecret.yaml
+++ b/kubernetes/apps/network/unifi-dns/app/externalsecret.yaml
@@ -3,17 +3,16 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: external-dns-cloudflare
+  name: unifi-dns
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: external-dns-cloudflare-secret
+    name: unifi-dns-secret
     template:
       data:
-        CF_API_TOKEN: "{{ .CLOUDFLARE_DNS_TOKEN }}"
-        CF_ZONE_ID: "{{ .CLOUDFLARE_ZONE_ID }}"
+        UNIFI_API_KEY: "{{ .UNIFI_API_KEY }}"
   dataFrom:
     - extract:
-        key: cloudflare
+        key: unifi
