--- a/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app external-dns-unifi
+  name: &app unifi-dns
 spec:
   interval: 1h
   chartRef:
@@ -30,7 +30,7 @@ spec:
           - name: UNIFI_API_KEY
             valueFrom:
               secretKeyRef:
-                name: &secret external-dns-unifi-secret
+                name: &secret unifi-dns-secret
                 key: UNIFI_API_KEY
         livenessProbe:
           httpGet:
@@ -44,14 +44,11 @@ spec:
             port: http-webhook
           initialDelaySeconds: 10
           timeoutSeconds: 5
-    extraArgs:
-      - --ignore-ingress-tls-spec
     domainFilters:
       - ${SECRET_DOMAIN}
     policy: sync
     sources:
       - gateway-httproute
-      - ingress
       - service
     triggerLoopOnEvent: true
     txtOwnerId: main
