chore(external-dns): separate  deployment

--- a/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: external-dns-unifi
+    name: unifi-dns
   install:
     remediation:
       retries: -1
