--- a/truenas/stacks/03-minio/docker-compose.yml
+++ b/truenas/stacks/03-minio/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       MINIO_UPDATE: "off"
       MINIO_PROMETHEUS_JOB_ID: minio
       MINIO_PROMETHEUS_AUTH_TYPE: public
+      MINIO_PROMETHEUS_URL: https://prometheus.wyde.network
     command:
       - minio
       - server
