--- a/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
@@ -46,3 +46,36 @@ spec:
     - action: replace
       targetLabel: job
       replacement: *name
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/monitoring.coreos.com/scrapeconfig_v1alpha1.json
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: ScrapeConfig
+metadata:
+  name: &name traefik
+spec:
+  staticConfigs:
+    - targets:
+        - traefik.${SECRET_DOMAIN}
+  metricsPath: /metrics
+  scheme: HTTPS
+  honorTimestamps: true
+  relabelings:
+    - action: replace
+      targetLabel: job
+      replacement: *name
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/monitoring.coreos.com/scrapeconfig_v1alpha1.json
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: ScrapeConfig
+metadata:
+  name: &name minio
+spec:
+  staticConfigs:
+    - targets:
+        - s3.${SECRET_DOMAIN}
+  metricsPath: /minio/v2/metrics/cluster
+  scheme: HTTPS
+  relabelings:
+    - action: replace
+      targetLabel: job
+      replacement: *name
