chore(minio): enable prom metrics

--- a/truenas/stacks/03-minio/docker-compose.yml
+++ b/truenas/stacks/03-minio/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       MINIO_BROWSER_REDIRECT_URL: https://${CONSOLE_HOST}
       MINIO_DOMAIN: ${S3_HOST}
       MINIO_UPDATE: "off"
+      MINIO_PROMETHEUS_JOB_ID: minio
+      MINIO_PROMETHEUS_AUTH_TYPE: public
     command:
       - minio
       - server
