--- a/kubernetes/apps/storage/democratic-csi/nfs/externalsecret.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/externalsecret.yaml
@@ -35,7 +35,7 @@ spec:
             shareHost: nas.${SECRET_DOMAIN}
             shareAlldirs: false
             shareAllowedHosts: []
-            shareAllowedNetworks: [${NET_LOCAL_CIDR}]
+            shareAllowedNetworks: ["192.168.20.0/24"]
             shareMaprootUser: ""
             shareMaprootGroup: ""
             shareMapallUser: ${CONFIG_APP_USER}
