--- a/kubernetes/apps/self-hosted/searxng/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/searxng/app/helmrelease.yaml
@@ -88,7 +88,7 @@ spec:
               # Ports to allow through the default interface. This is needed for Kubernetes sidecars.
               FIREWALL_INPUT_PORTS: "8080,9999"
               # Allow access to K8s subnets.
-              FIREWALL_OUTBOUND_SUBNETS: ${CLUSTER_POD_CIDR},${CLUSTER_SVC_CIDR}
+              FIREWALL_OUTBOUND_SUBNETS: "10.42.0.0/16,10.43.0.0/16"
               # Internal health check server listening address.
               HEALTH_SERVER_ADDRESS: ":9999"
               VPN_SERVICE_PROVIDER: custom
