--- a/kubernetes/components/volsync/replicationdestination.yaml
+++ b/kubernetes/components/volsync/replicationdestination.yaml
@@ -12,13 +12,13 @@ spec:
       - ${VOLSYNC_ACCESSMODES:-ReadWriteOnce}
     cacheAccessModes:
       - ${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}
-    cacheCapacity: ${VOLSYNC_CACHE_CAPACITY:-1Gi}
+    cacheCapacity: ${VOLSYNC_CAPACITY:-1Gi}
     cacheStorageClassName: ${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}
     capacity: ${VOLSYNC_CAPACITY:-1Gi}
     cleanupCachePVC: true
     cleanupTempPVC: true
-    enableFileDeletion: true
     copyMethod: Snapshot
+    enableFileDeletion: true
     moverSecurityContext:
       runAsUser: ${APP_UID:-5000}
       runAsGroup: ${APP_GID:-5000}
