--- a/kubernetes/components/volsync/replicationdestination.yaml
+++ b/kubernetes/components/volsync/replicationdestination.yaml
@@ -20,9 +20,9 @@ spec:
     copyMethod: Snapshot
     enableFileDeletion: true
     moverSecurityContext:
-      runAsUser: ${APP_UID:-5000}
-      runAsGroup: ${APP_GID:-5000}
-      fsGroup: ${APP_GID:-5000}
+      runAsUser: ${VOLSYNC_PUID:-5000}
+      runAsGroup: ${VOLSYNC_PGID:-5000}
+      fsGroup: ${VOLSYNC_PGID:-5000}
     repository: ${APP}-volsync-secret
     storageClassName: ${VOLSYNC_STORAGECLASS:-truenas-ssd-iscsi}
     volumeSnapshotClassName: ${VOLSYNC_SNAPSHOTCLASS:-truenas-ssd-iscsi}
