--- a/kubernetes/components/volsync/replicationsource.yaml
+++ b/kubernetes/components/volsync/replicationsource.yaml
@@ -17,9 +17,9 @@ spec:
     cacheStorageClassName: ${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}
     copyMethod: Snapshot
     moverSecurityContext:
-      runAsUser: ${APP_UID:-5000}
-      runAsGroup: ${APP_GID:-5000}
-      fsGroup: ${APP_GID:-5000}
+      runAsUser: ${VOLSYNC_PUID:-5000}
+      runAsGroup: ${VOLSYNC_PGID:-5000}
+      fsGroup: ${VOLSYNC_PGID:-5000}
     pruneIntervalDays: 7
     repository: ${APP}-volsync-secret
     retain:
