--- a/kubernetes/apps/database/pgadmin/ks.yaml
+++ b/kubernetes/apps/database/pgadmin/ks.yaml
@@ -23,6 +23,8 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      APP_UID: "5050"
+      APP_GID: "5050"
   prune: true
   retryInterval: 2m
   sourceRef:
