chore(atuin): modify uid/gid security

--- a/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
@@ -73,9 +73,8 @@ spec:
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
-        runAsUser: &uid 5000
-        runAsGroup: *uid
-        fsGroup: *uid
+        runAsUser: 65534
+        runAsGroup: 65534
         fsGroupChangePolicy: OnRootMismatch
     persistence:
       config:
