chore: refactoring uid/gid pod security & volsync component

--- a/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
+++ b/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
@@ -74,9 +74,9 @@ spec:
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
-        runAsUser: &id 1000
-        runAsGroup: *id
-        fsGroup: *id
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
