--- a/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
@@ -55,9 +55,9 @@ spec:
               capabilities: {drop: ["ALL"]}
     defaultPodOptions:
       securityContext:
-        runAsUser: &uid 5000
-        runAsGroup: &gid 4000
-        fsGroup: *gid
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
     persistence:
       config:
