--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/app/helmrelease.yaml
@@ -42,8 +42,8 @@ spec:
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
-        runAsUser: &uid 65534
-        runAsGroup: *uid
+        runAsUser: 65534
+        runAsGroup: 65534
     rawResources:
       talosServiceAccount:
         apiVersion: talos.dev/v1alpha1
