--- a/kubernetes/apps/media/navidrome/ks.yaml
+++ b/kubernetes/apps/media/navidrome/ks.yaml
@@ -21,10 +21,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      APP_UID: &uid ${CONFIG_APP_UID}
-      APP_GID: *uid
-      VOLSYNC_CAPACITY: &capacity 2Gi
-      VOLSYNC_CACHE_CAPACITY: *capacity
+      VOLSYNC_CAPACITY: 2Gi
   prune: true
   retryInterval: 2m
   sourceRef:
