--- a/kubernetes/apps/network/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/network/echo-server/app/helmrelease.yaml
@@ -56,8 +56,8 @@ spec:
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
-        runAsUser: &uid 65534
-        runAsGroup: *uid
+        runAsUser: 65534
+        runAsGroup: 65534
     route:
       app:
         hostnames:
