--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -104,7 +104,7 @@ spec:
         globalMounts:
           - path: /romm/config/config.yml
             subPath: config.yml
-            readOnly: true
+            readOnly: false
       romm-assets:
         type: nfs
         server: nas.${SECRET_DOMAIN}
