chore(romm): disable configMap

--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
               limits:
                 memory: 4Gi
             securityContext:
-              allowPrivilegeEscalation: false
+              # allowPrivilegeEscalation: false
               # readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
     defaultPodOptions:
@@ -97,14 +97,14 @@ spec:
         type: emptyDir
         globalMounts:
           - path: /romm/config
-      romm-config-file:
-        type: configMap
-        name: "{{ .Release.Name }}-configmap"
-        defaultMode: 0664
-        globalMounts:
-          - path: /romm/config/config.yml
-            subPath: config.yml
-            # readOnly: true
+      # romm-config-file:
+      #   type: configMap
+      #   name: "{{ .Release.Name }}-configmap"
+      #   defaultMode: 0664
+      #   globalMounts:
+      #     - path: /romm/config/config.yml
+      #       subPath: config.yml
+      #       readOnly: true
       romm-assets:
         type: nfs
         server: nas.${SECRET_DOMAIN}
