--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -29,6 +29,14 @@ spec:
             envFrom: &envFrom
               - secretRef:
                   name: "{{ .Release.Name }}-secret"
+          copy-config:
+            image:
+              repository: busybox
+              tag: 1.37.0@sha256:ab33eacc8251e3807b85bb6dba570e4698c3998eca6f0fc2ccb60575a563ea74
+            command:
+              - cp
+              - /romm/config-template/config.yml
+              - /romm/config/config.yml
         containers:
           app:
             image:
@@ -102,7 +110,7 @@ spec:
         name: "{{ .Release.Name }}-configmap"
         defaultMode: 0664
         globalMounts:
-          - path: /romm/config/config.yml
+          - path: /romm/config-template/config.yml
             subPath: config.yml
             readOnly: true
       romm-assets:
