--- a/kubernetes/apps/utilities/cyberchef/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/cyberchef/app/helmrelease.yaml
@@ -61,7 +61,7 @@ spec:
         type: emptyDir
         globalMounts:
           - path: /var/cache/nginx
-      logs:
+      log:
         type: emptyDir
         globalMounts:
           - path: /var/log/nginx
