--- a/kubernetes/apps/utilities/it-tools/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/it-tools/app/helmrelease.yaml
@@ -53,7 +53,7 @@ spec:
         type: emptyDir
         globalMounts:
           - path: /var/cache/nginx
-      logs:
+      log:
         type: emptyDir
         globalMounts:
           - path: /var/log/nginx
