chore(immich): modify persistence

--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -138,16 +138,9 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     persistence:
       cache:
-        existingClaim: "{{ .Release.Name }}"
-        # globalMounts:
-        #   - path: /cache
-        advancedMounts:
-          immich:
-            machine-learning:
-              - path: /cache
-                subPath: cache
-              - path: /.cache
-                subPath: dotCache
+        type: emptyDir
+        globalMounts:
+          - path: /.cache
       config:
         type: secret
         name: "{{ .Release.Name }}-config-secret"
@@ -161,6 +154,10 @@ spec:
         path: /mnt/hdd-data/Immich
         globalMounts:
           - path: /data
+      ml-cache:
+        existingClaim: "{{ .Release.Name }}"
+        globalMounts:
+          - path: /cache
       photos:
         type: nfs
         server: nas.${SECRET_DOMAIN}
