--- a/kubernetes/apps/games/romm/app/kustomization.yaml
+++ b/kubernetes/apps/games/romm/app/kustomization.yaml
@@ -9,5 +9,5 @@ configMapGenerator:
   - name: romm-configmap
     files:
       - config.yml=./resources/config.yml
-generatorOptions:
-  disableNameSuffixHash: true
+configurations:
+  - ./kustomizeconfig.yaml
