chore(romm): disable configmap name suffix hash

--- a/kubernetes/apps/games/romm/app/kustomization.yaml
+++ b/kubernetes/apps/games/romm/app/kustomization.yaml
@@ -11,3 +11,5 @@ configMapGenerator:
       - config.yml=./resources/config.yml
 configurations:
   - ./kustomizeconfig.yaml
+generatorOptions:
+  disableNameSuffixHash: true
