feat(flux): prepare for v2.7.0 upgrade

--- a/.renovate/customManagers.json5
+++ b/.renovate/customManagers.json5
@@ -26,5 +26,12 @@
       matchStrings: ["imageName: (?<depName>[^\\s:]+):(?<currentValue>\\S+)(@(?<currentDigest>sha256:\\S+)?)"],
       datasourceTemplate: "docker",
     },
+    {
+      customType: "regex",
+      description: "Process OCI dependencies",
+      managerFilePatterns: ["/\\.yaml(?:\\.j2)?$/"],
+      matchStrings: ["oci://(?<depName>[^:]+):(?<currentValue>\\S+)"],
+      datasourceTemplate: "docker",
+    },
   ],
 }
